Updating the pom.